누락된 코드 다시 개발 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="title_challenge_list">챌린지 목록</string>
     <string name="title_challenge_gallery">챌린지 갤러리</string>
     <string name="title_mileage_shop">마일리지 샵</string>
+
+<!--    홈 프래그먼트-->
+    <string name="state_good">좋음</string>
+    <string name="state_normal">보통</string>
+    <string name="state_bad">나쁨</string>
+    <string name="state_very_bad">매우 나쁨</string>
+
 </resources>
